updates to gradle build
updated build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ jar {
 }
 
 bootRepackage {
-    mainClass = '273-Assignment1.ModApplication'
+    mainClass = 'A1.ModApplication'
 }
 
 repositories {
